# hex-bridge

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  README_zh.md
.dotlineplane/: layout.json  networktool.settings.layout.json  serialtool.settings.json
.kilo/: agent-manager.json
files/: network mcp.txt
files/design/firmware/: 01-Architecture.md  02-MsgBus.md  03-MCP-Transport.md  04-UART-Module.md  05-Bridge-Design.md  06-Ethernet-Module.md  README.md
files/design/function/: 02-network.md  README.md
files/design/protocol/: 01-Introduction.md  02-Frame.md  03-System.md  04-CAN.md  05-SPI.md  06-I2C.md  07-UART.md  08-Network.md  09-TCP.md  10-UDP.md  11-WebSocket.md  12-GPIO.md  13-Bulk.md  (+5 more)
files/sch/: esp32-pinout-design.md
main/: CMakeLists.txt  hex_config.h  idf_component.yml  main.c
main/core/: eth_init.c  eth_init.h  module_base.h  msg_bus.c  msg_bus.h  seq_num.h  topology.c  topology.h
main/modules/: mod_network.c  mod_network.h  mod_system.c  mod_system.h  mod_tcp.c  mod_tcp.h  mod_uart.c  mod_uart.h  mod_udp.c  mod_udp.h  mod_ws.c  mod_ws.h
main/protocol/: ubcp_crc16.h  ubcp_def.h  ubcp_frame.c  ubcp_frame.h
main/transport/: mcp_transport.c  mcp_transport.h
main/utils/: hex_log.h
script/: release-github.ps1
script/cli/: hex-bridge-network-cli.py  hex-bridge-uart-cli.js  hex-bridge-uart-cli.py  package-lock.json  ubcp_utils.py
script/test/: diag_com24.py  mcp24_bridge.py  mcp24_ipc.py  mcp_transport.py  run_all.py  test_mcp_baud.py  test_network.py  test_protocol.py  test_system.py  test_uart.py  test_uart_mcp.py  ubcp_client.py
(+14 files in other folders)
